# RaptorEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: linux.yml
configuration/: visualstudio.vcxproj.user.in
examples/: CMakeLists.txt
examples/1.render/1.1.colored_triangle/: colored_triangle.fs  colored_triangle.vs  main.cpp
modules/: CMakeLists.txt
modules/hardware_system_module/: CMakeLists.txt
src/: CMakeLists.txt  defines.hpp
src/core/: engine.cpp  engine.hpp  render_engine.cpp  render_engine.hpp
src/memory/: utils.hpp
src/memory/allocators/: linear_allocator.cpp  linear_allocator.hpp
src/raptor_engine/: defines.hpp
src/raptor_engine/core/: engine.cpp  engine.hpp  render_engine.cpp  render_engine.hpp
src/raptor_engine/core/components/: window_component.cpp  window_component.hpp
src/raptor_engine/core/events/: engine_events.hpp
src/raptor_engine/core/systems/: hardware_system.cpp  hardware_system.hpp  window_system.cpp  window_system.hpp
src/raptor_engine/ecs/: component.cpp  component.hpp  component_manager.cpp  component_manager.hpp  entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  family_type_id.hpp  handle.hpp  handle_table.hpp  i_entity.cpp  i_entity.hpp  i_system.cpp  i_system.hpp  icomponent.cpp  icomponent.hpp  platform.hpp  system.cpp  system.hpp  system_manager.cpp  system_manager.hpp
src/raptor_engine/ecs/component/: component.cpp  component.hpp  component_manager.cpp  component_manager.hpp  i_component.cpp  i_component.hpp
src/raptor_engine/ecs/entity/: entity.cpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  i_entity.cpp  i_entity.hpp
src/raptor_engine/ecs/event/: event.hpp  event_delegate.hpp  event_dispatcher.hpp  event_handler.cpp  event_handler.hpp  i_event.cpp  i_event.hpp  i_event_delegate.hpp  i_event_dispatcher.hpp  i_event_handler.cpp  i_event_handler.hpp  i_event_listener.cpp  i_event_listener.hpp
src/raptor_engine/ecs/system/: i_system.cpp  i_system.hpp  system.cpp  system.hpp  system_manager.cpp  system_manager.hpp
src/raptor_engine/ecs/utils/: family_type_id.hpp  handle.hpp  handle_table.hpp  platform.hpp  timer.hpp
src/raptor_engine/memory/: global_memory_user.cpp  global_memory_user.hpp  memory_manager.cpp  memory_manager.hpp  utils.hpp
src/raptor_engine/memory/allocators/: i_allocator.cpp  i_allocator.hpp  linear_allocator.cpp  linear_allocator.hpp  memory_chunk_allocator.hpp  pool_allocator.cpp  pool_allocator.hpp  stack_allocator.cpp  stack_allocator.hpp
src/raptor_engine/render/: base_render_api.cpp  base_render_api.hpp  base_renderer.cpp  base_renderer.hpp  draw_config.cpp  draw_config.hpp  element_buffer_object.cpp  element_buffer_object.hpp  forward_ldr_renderer.cpp  forward_ldr_renderer.hpp  geometry_manager.cpp  geometry_manager.hpp  geometry_object.cpp  geometry_object.hpp  ogl_render_api.cpp  ogl_render_api.hpp  renderable_object.cpp  renderable_object.hpp  shader.cpp  shader.hpp  shader_manager.cpp  shader_manager.hpp  shader_program.cpp  shader_program.hpp  texture_config.cpp  texture_config.hpp  texture_manager.cpp  texture_manager.hpp  texture_program.cpp  texture_program.hpp  vertex_array_object.cpp  vertex_array_object.hpp  vertex_buffer_object.cpp  vertex_buffer_object.hpp
src/raptor_engine/structs/: engine_data.cpp  engine_data.hpp  hardware_system_data.cpp  hardware_system_data.hpp  high_level_renderer_data.cpp  high_level_renderer_data.hpp  init_engine_data.cpp  init_engine_data.hpp  init_render_engine_data.cpp  init_render_engine_data.hpp  render_object_data.cpp  render_object_data.hpp  scene_data.cpp  scene_data.hpp  window_data.cpp  window_data.hpp
src/raptor_engine/systems/: hardware_system.cpp  hardware_system.hpp
src/raptor_engine/utils/: file_system.h
src/render/: base_render_api.cpp  base_render_api.hpp  base_renderer.cpp  base_renderer.hpp  forward_ldr_renderer.cpp  forward_ldr_renderer.hpp  ogl_render_api.cpp  ogl_render_api.hpp  shader.hpp
src/structs/: base_hardware_system_data.cpp  base_hardware_system_data.hpp  hardware_system_data.cpp  high_level_renderer_data.cpp  high_level_renderer_data.hpp  render_engine_data.cpp  render_engine_data.hpp  render_object_data.cpp  render_object_data.hpp  sdl_hardware_system_data.cpp  sdl_hardware_system_data.hpp  window_data.cpp  window_data.hpp
src/systems/: base_hardware_system.cpp  base_hardware_system.hpp  hardware_system.cpp  hardware_system.hpp  sdl_hardware_system.cpp  sdl_hardware_system.hpp
src/utils/: simpl.hpp  types.hpp
tests/: CMakeLists.txt  hardware_system_tests.cpp  main.cpp
tests/core/: engine_tests.cpp
tests/learn_opengl/: colored_triangle.cpp
tests/memory/: utils_tests.cpp
tests/memory/allocators/: linear_allocator_tests.cpp
tests/render/geometry_manager/: geometry_manager_tests.cpp
tests/render/geometry_object/: geometry_object_tests.cpp
tests/render/renderable_object/: renderable_object.cpp
tests/render/shader_manager/: shader_manager_tests.cpp  test.fs
tests/render/shader_program/: shader_program_tests.cpp
tests/render/texture_manager/: texture_manager_tests.cpp
tests/render/texture_program/: texture_program_tests.cpp
tests/systems/: hardware_system_tests.cpp
